hphp/hack/test/typecheck/function_pointer/fun_and_clsmeth_disabled/fun_disabled.php.exp
File "fun_disabled.php", line 4, characters 3-5:
`fun()` is disabled; switch to first-class references like `test<>` (Parsing[1002])
File "fun_disabled.php", line 4, characters 3-5:
Unbound name: `HH\fun` (a global function) (Naming[2049])
File "fun_disabled.php", line 4, characters 3-5:
Unbound name (typing): `HH\fun` (Typing[4107])
